--- a/css/jquery.tagselect.css
+++ b/css/jquery.tagselect.css
@@ -1,7 +1,7 @@
 div.tagselect { border:1px solid #CCC; background: #FFF; padding:5px; width:300px; min-height:10px; overflow-y: auto;}
 div.tagselect span.tag { border: 1px solid #a5d24a; -moz-border-radius:2px; -webkit-border-radius:2px; display: block; float: left; padding: 5px; text-decoration:none; background: #cde69c; color: #638421; margin-right: 5px; margin-bottom:5px;font-family: helvetica;  font-size:13px;}
 div.tagselect span.tag a { font-weight: bold; color: #82ad2b; text-decoration:none; font-size: 11px;  } 
-div.tagselect input { width:80px; margin: 2px 5px 2px 0px; font-family: helvetica; font-size: 13px; border:1px solid transparent; padding:5px; background: transparent; color: #000; outline:0px; }
+div.tagselect input { outline: 1px #cccccc dashed; width:80px; margin: 2px 5px 2px 0px; font-family: helvetica; font-size: 13px; border:1px solid transparent; padding:5px; background: transparent; color: #000; outline:0px; }
 div.tagselect div { display:block; float: left; } 
 .tags_clear { clear: both; width: 100%; height: 0px; }
 .not_valid {background: #FBD8DB !important; color: #90111A !important;}
